[package]
name = "bellhop"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Github"
homepage = "https://github.com/softprops/hubcaps"
repository = "https://github.com/softprops/hubcaps"
keywords = ["hyper", "jenkins"]
license = "MIT"

build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
hyper = "0.6"
serde = "*"
serde_json = "*"
